force-app/main/default/objects/Client_Market_Impact__c/Client_Market_Impact__c.object-meta.xml
<CustomObject>
    <label>Client Market Impact</label>
    <nameField>
        <label>Client Market Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Market Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>