force-app/main/default/objects/Client_Market_Impact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Client_Market_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>