force-app/main/default/objects/Client_Market_Impact__c/fields/communication_Status__c.field-meta.xml
<CustomField>
    <fullName>communication_Status__c</fullName>
    <label>Communication Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>