force-app/main/default/objects/Client_Market_Impact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Client_Market_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>