force-app/main/default/objects/Client_Market_Impact__c/fields/Estimated_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Profit__c</fullName>
    <label>Estimated Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>