force-app/main/default/objects/Client_Market_Impact__c/fields/Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss__c</fullName>
    <label>Gain/Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>