force-app/main/default/objects/Client_Market_Impact__c/fields/Impact_Type__c.field-meta.xml
<CustomField>
    <fullName>Impact_Type__c</fullName>
    <label>Impact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Down</fullName>
            </value>
            <value>
                <fullName>Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>