force-app/main/default/objects/Client_Market_Impact__c/fields/Market_Event__c.field-meta.xml
<CustomField>
    <fullName>Market_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market Event</label>
    <referenceTo>Market_Event__c</referenceTo>
    <relationshipLabel>Client Market Impacts</relationshipLabel>
    <relationshipName>Client_Market_Impacts</relationshipName>
    <type>Lookup</type>
</CustomField>