force-app/main/default/objects/Client_Market_Impact__c/fields/Market_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Market_Event_ID__c</fullName>
    <label>Market Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>