force-app/main/default/objects/Client_Market_Impact__c/fields/Portfolio_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Exposure__c</fullName>
    <label>Portfolio Exposure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>