force-app/main/default/objects/Client_Market_Impact__c/fields/Preferred_channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_channel__c</fullName>
    <label>Preferred channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>whatsapp</fullName>
            </value>
            <value>
                <fullName>Sms</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>