force-app/main/default/objects/Client_Market_Impact__c/fields/Share_Name__c.field-meta.xml
<CustomField>
    <fullName>Share_Name__c</fullName>
    <label>Share Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reliance</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>Infosys</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>ICS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>