force-app/main/default/objects/Client_Market_Impact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Share_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>