force-app/main/default/objects/Client_Market_Impact__c/listViews/Messaging_Process_Client_Market_Impact.listView-meta.xml
<ListView>
    <fullName>Messaging_Process_Client_Market_Impact</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging Process</label>
    <queue>Messaging_Process</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>